media query conflict resolved, overlapping pixel size was breaking the design

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -168,7 +168,7 @@ body {
 }
 
 
-@media only screen and (min-width: 868px) {
+@media only screen and (min-width: 860px) {
   .navbar {
     width: 100%;
   }
